language/move-lang/tests/move_check/naming/unbound_module.exp
error[E03002]: unbound module
  ┌─ tests/move_check/naming/unbound_module.move:2:9
  │
2 │     use 0x1::X as X;
  │         ^^^^^^ Invalid 'use'. Unbound module: '0x1::X'

error[E03002]: unbound module
  ┌─ tests/move_check/naming/unbound_module.move:4:9
  │
4 │         X::foo();
  │         ^ Unbound module alias 'X'

