language/move-lang/tests/move_check/naming/unbound_module.move
module 0x8675309::M {
    use 0x1::X as X;
    fun foo() {
        X::foo();
    }
}
